--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -19,7 +19,7 @@
     <string name="dating_switch_button">Еще…</string>
     <string name="dating_prev_button">Предыдущая</string>
     <string name="dating_chat_button">Поболтать</string>
-    
+
     <string name="waiting_a_products">Пожалуйста, подождите. Мы загружаем доступные для покупок товары</string>
     <string name="likes_background_text">Нет симпатий</string>
 
@@ -792,8 +792,7 @@
     <string name="preload_photo_type_always_on">Включена всегда</string>
     <string name="preload_photo_type_preload_off">Выключена</string>
 
-    <string name="wrong_time_popup_title">Установите текущую дату</string>
-    <string name="wrong_time_popup_text">Дата на устройстве не совпадает с текущей</string>
+    <string name="wrong_time_popup_text">Не удалось установить безопасное соединение с сервером.\nВозможно, на вашем устройстве установлена неправильная дата.</string>
     <string name="wrong_time_popup_button">Открыть настройки</string>
 
 </resources>
