--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -780,7 +780,7 @@
     <string name="hint_myprofile_buy_vip">Купите VIP-статус и наслаждайтесь безграничным общением</string>
     <string name="pull_to_refresh_pull_label">Потяните для обновления…</string>
     <string name="pull_to_refresh_release_label">Отпустите для обновления…</string>
-    <string name="messaging_block_buy_vip">Для продолжения диалога необходим VIP-статус</string>
+    <string name="messaging_block_buy_vip">Для продолжения диалога необходим VIP\u2011статус</string>
     <string name="pull_to_refresh_refreshing_label">Загрузка…</string>
     <string name="user_added_to_black_list">Пользователь добавлен в черный список</string>
     <string name="user_deleted_from_black_list">Пользователь удален из черного списка</string>
