--- a/src/main/res/values-ko/strings.xml
+++ b/src/main/res/values-ko/strings.xml
@@ -126,6 +126,7 @@
     <string name="chat_sexuality_out">당신은 섹시함을 평가하였습니다.</string>
     <string name="chat_wink_in">당신에게 윙크를 보냈습니다.</string>
     <string name="chat_wink_out">당신이 윙크를 보냅니다.</string>
+    <string name="filter_filter">필터</string>
     <string name="filter_age_string">%1$d 에서 %2$d 까지</string>
     <string name="filter_only_beautiful">아름다운 여성들만</string>
     <string name="filter_extra_parameters">추가적인 필터 기준</string>
@@ -209,7 +210,6 @@
     </plurals>
     <string name="novice_sympathy">당신이 \n 정말 호감이 있는 상대에게 \n 기분 좋은 만남을 이끌어내기 위해 호감도를 전달해보세요.</string>
     <string name="general_edit_profile_message">필수 기입 사항에 반드시 입력 하십시오.</string>
-    <string name="general_premium_access_error">해당 기능을 이용하기 위해서 프리미엄 레벨이 필요합니다.</string>
     <string name="general_search_null_response_error">아무것도 검색할 수 없습니다. 필터를 변경해보세요.</string>
     <string name="change_filters">필터 설정 변경</string>
     <string name="general_sex">성별</string>
