--- a/src/main/res/values-pl/strings.xml
+++ b/src/main/res/values-pl/strings.xml
@@ -129,6 +129,7 @@
     <string name="chat_sexuality_out">Oceniłeś/-aś seksualność.</string>
     <string name="chat_wink_in">Ktoś puścił oczko do Ciebie</string>
     <string name="chat_wink_out">Puściłeś/-aś oczko</string>
+    <string name="filter_filter">Filtr</string>
     <string name="filter_age_string">Od %1$d do %2$d</string>
     <string name="filter_only_beautiful">Tylko piękni</string>
     <string name="filter_extra_parameters">Dodatkowe kryteria</string>
@@ -218,7 +219,6 @@
     </plurals>
     <string name="novice_sympathy">Wysyłaj sympatie tym, kto Ci\nrzeczywiście się podoba,\naby zacząć miłą znajomość</string>
     <string name="general_edit_profile_message">Prosimy o uzupełnienie wszystkich pól ankiety</string>
-    <string name="general_premium_access_error">Dla tej opcji potrzebny jest Premium</string>
     <string name="general_search_null_response_error">Niczego nie znaleziono. Spróbuj zmienić filtry</string>
     <string name="change_filters">Zmień filtry</string>
     <string name="general_sex">Płeć</string>
