--- a/src/main/res/values-ro/strings.xml
+++ b/src/main/res/values-ro/strings.xml
@@ -124,6 +124,7 @@
     <string name="chat_sexuality_out">Ati apreciat sexualitate.</string>
     <string name="chat_wink_in">V-au facut din ochi</string>
     <string name="chat_wink_out">Ati facut din ochi</string>
+    <string name="filter_filter">Filtru</string>
     <string name="filter_age_string">De la %1$d pana la %2$d</string>
     <string name="filter_only_beautiful">Numai frumoase</string>
     <string name="filter_extra_parameters">Parametri adaugatori</string>
@@ -213,7 +214,6 @@
     </plurals>
     <string name="novice_sympathy">Trimiteti simpatii la cei \n care va sunt dragi cu adevarat, \n pentru a incepe o cunostinta placuta</string>
     <string name="general_edit_profile_message">Fiti amabili, sa indepliniti campurile necesare a chestionarului</string>
-    <string name="general_premium_access_error">Pentru aceasta functie aveti nevoie de Premium</string>
     <string name="general_search_null_response_error">Cautare esuata. Incercati sa faceti schimbari in filtru</string>
     <string name="change_filters">Schimba filtru</string>
     <string name="general_sex">Genul</string>
