--- a/src/main/res/values-sk/strings.xml
+++ b/src/main/res/values-sk/strings.xml
@@ -130,6 +130,7 @@
     <string name="chat_sexuality_out">Ocenili ste sexualitu</string>
     <string name="chat_wink_in">Niekto na Vás žmurkol.</string>
     <string name="chat_wink_out">Žmurkli ste.</string>
+    <string name="filter_filter">Filtre</string>
     <string name="filter_age_string">Od %1$d do %2$d</string>
     <string name="filter_only_beautiful">Iba krásne</string>
     <string name="filter_extra_parameters">Ďalšie parametre</string>
@@ -219,7 +220,6 @@
     </plurals>
     <string name="novice_sympathy">Posielajte sympatie iba ľuďom, ktorý sa Vám\nnaozaj páčia\n - a môžete začať príjemnú známosť</string>
     <string name="general_edit_profile_message">Prosím, vyplňte všetky povinné polia dotazníka</string>
-    <string name="general_premium_access_error">Pre túto funkciu je potrebné Premium</string>
     <string name="general_search_null_response_error">Nič nenájdené. Skúste zmeniť nastavenia filtrov.</string>
     <string name="change_filters">Zmeniť filtre</string>
     <string name="general_sex">Pohlavie</string>
