#35656: added left menu item

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -178,6 +178,7 @@
     <string name="general_dating">Знакомства</string>
     <string name="general_likes">Я нравлюсь</string>
 
+    <string name="general_photoblog">Фотолента</string>
     <string name="general_sympathies">Симпатии</string>
     <string name="general_sympathy">Симпатия</string>
     <string name="general_delight">Восхищение</string>
